@@ -16,12 +16,14 @@ class mysql_query_tab:
 			"label": "query_label",
 			"page": "first_query",
 			"query_bottom_label": "query_bottom_label",
+			"query_db_label": "query_db_label",
 		}
 		
 		for attribute, xmlname in renameload.iteritems():
 			self.__dict__[attribute] = xml.get_widget(xmlname)
 			
-		self.db = None
+		self.current_host = None
+		self.current_db = None
 		self.model = None
 		self.last_source = None
 		self.result_info = None
@@ -49,11 +51,45 @@ class mysql_query_tab:
 		self.treeview = None
 		self.model = None
 		self.textview = None
+		self.update_db_label()
 		
 	def set(self, text):
 		self.last_source = text
 		self.textview.get_buffer().set_text(text)
 	
+	def update_db_label(self):
+		h = self.current_host
+		d = self.current_db
+		if not h:
+			self.query_db_label.set_label("no host/database selected")
+			return
+		title = "selected host"
+		if d:
+			dname = "/" + d.name
+			title = "selected database"
+		else:
+			dname = ""
+		if h.name == h.host:
+			hname = h.name
+		else:
+			hname = "%s(%s)" % (h.name, h.host)
+		
+		self.query_db_label.set_label("%s: %s@%s%s" % (
+			title,
+			h.user, hname,
+			dname
+		))
+		
+	def set_current_host(self, host):
+		self.current_host = host
+		self.current_db = host.current_db
+		self.update_db_label()
+
+	def set_current_db(self, db):
+		self.current_host = db.host
+		self.current_db = db
+		self.update_db_label()
+
 	def update_bottom_label(self):
 		self.query_bottom_label.set_label("encoding: %s" % self.encoding)
 		
