@@ -7,6 +7,7 @@ emma (0.4) unstable; urgency=low
   * store table order on request
   Sun, 13 Aug 2006 17:52:25 +0200
   * improved append to table-function to requery created record
+  * each tab has its on selected database (show beneath the encoding)
  -- Florian Schmidt <schmidt_florian@gmx.de>  Sat, 12 Aug 2006 19:54:37 +0200
  
 emma (0.3) unstable; urgency=low
